# box3d

./: .gitignore  ARCHITECTURE.md  BOX3D-AUDIT.md  CHANGELOG.md  CLAUDE.md  EXPERT-REPORT.md  LICENSE  MASTER-AUDIT.md  RC2-GATE.md  README.md  SPRINT-CORE-REFACTOR-01.patch  box3d_sprint51.patch  pyproject.toml  requirements.txt  run.sh  test.sh  test_cli_variations.sh
.github/workflows/: ci.yml  release.yml
backend/app/: database.py  main.py  models.py
backend/app/services/: ingestion.py
cli/: __init__.py  bootstrap.py  diagnostics.py  instructions_template.txt  main.py  utils.py
core/: __init__.py  models.py  pipeline.py  registry.py  version.py
docs/: CHANGELOG.md  adr_log.md  dev_diary.md  sprint_log.md  web_manual.md
engine/: __init__.py  blending.py  compositor.py  perspective.py  spine_builder.py
frontend/: app.js  index.html
gui/: app.py  config.py  constants.py  control_tab.py  designer_engine.py  designer_tab.py  fonts.py
hooks/: hook-pyvips.py
profiles/arcade/: profile.json
profiles/dvd/: profile.json
profiles/mvs/: profile.json
tests/: run_visual_tests.py  test_v2.py  test_web.py
tests/visual/: cases.py  generate_baselines.py  test_render_snapshot.py  utils.py
tools/: fix_template_alpha.py
tools/box3d_designer_pro/: app.js  canvas.js  index.html  profile.js
tools/box3d_designer_pro/styles/: main.css  retro.css
web/: server.py
web/ui/: app.js  index.html  style.css
